feat: create query estimate router
